kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-counter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mmalabugin.ru
      http:
        paths:
          - path: /react-counter
            pathType: Prefix
            backend:
              service:
                name: react-counter
                port:
                  number: 80
